fixed overflow incomponent id and  config panel

--- a/frontend/packages/ux-editor/src/components/config/ExpressionContent/ExpressionContent.module.css
+++ b/frontend/packages/ux-editor/src/components/config/ExpressionContent/ExpressionContent.module.css
@@ -4,7 +4,7 @@
   border-radius: var(--fds-border_radius-medium);
   border: 0;
   box-shadow: var(--fds-shadow-small);
-  display: contents;
+  display: grid;
   gap: var(--studio-expression-spacing);
   grid-template-columns: [start] 1fr auto [end];
   margin: 0;
@@ -18,12 +18,12 @@
 
 .legendContent {
   margin-left: var(--studio-expression-spacing);
-  overflow-wrap: break-word;
+  text-overflow: ellipsis;
+  overflow: auto;
 }
 
 .deleteButton {
   margin-right: var(--studio-expression-spacing);
-  width: 100%;
 }
 
 .legendContent,
